--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,5 +10,10 @@ html, body {
 
 body {
     margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
+ul {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
 }
