--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -14,7 +14,8 @@ $color-base3: #333F60;
 $color-social: #2D3754;
 $color-base-blue: #00D8FF;
 $color-new-blue: #00BCD4;
-$color-error: rgba(255, 84, 84, 0.8);
+$color-light-blue: #007bff;
+$color-error: rgba(255, 84, 84, 1);
 $color-btn-base:  #202741;
 $base-bg-card: #333E61;
 $base-bg-card-hover: #333E61;
