--- a/frontend/src/app/components/app-header/app-header.component.scss
+++ b/frontend/src/app/components/app-header/app-header.component.scss
@@ -1,8 +1,7 @@
-@import '../../../styles/_typography.scss';
+@import '../../../styles/typography.scss';
 
 app-header {
     width: 100%;
-
     .header {
         position: fixed;
         z-index: 998;
@@ -10,9 +9,7 @@ app-header {
         padding: 7px 0px;
         width: 100%;
         display: flex;
-        // justify-content: center;
         background: $color-black02;
-        // transition: all 0.5s;
         left: 0;
 
         .container {
@@ -22,8 +19,6 @@ app-header {
             align-items: center;
             width: 100%;
             padding: 0px 10px;
-            // justify-content: space-around;
-            // align-content: center;
 
 
             .logo {
@@ -38,19 +33,106 @@ app-header {
             }
 
             .header-nav {
+                display: flex;
+                height: 100%;
+                align-items: center;
                 .auth-block {
+                    display: flex;
+                    align-items: center;
+                    height: 100%;
                     &_list {
+
+                        &:hover {
+                            background: $color-white;
+                            border-radius: 5px;
+                        }
                         .link {
-                            padding: 5px 5px;
+                            display: flex;
+                            align-content: center;
+                            width: 100%;
+                            height: 100%;
+                            padding: 10px 20px;
+                            align-self: center;
                             @include list_item;
                             color: $color-white;
                             transition: all 0.3s ease-in-out;
                             &:hover {
+                                color: $color-black;
                                 opacity: 0.8;
                             }
                         }
                     }
+                }
 
+                .lang-box {
+                    display: block;
+                    width: 30px;
+                    margin-right: 16px;
+                    &:hover {
+                        opacity: 0.8;
+                        color: $color-base-blue;
+                    }
+                    mat-form-field {
+                        width: 50px;
+                        .mat-form-field-wrapper {
+                            padding-bottom: 0;
+                            
+                            .mat-form-field-flex {
+                                .mat-form-field-infix {
+                                    border-top: 0;
+                                    width: 100%;
+                                    .mat-select-arrow-wrapper {
+                                        .mat-select-arrow {
+                                            color: $color-white;
+                                            &:hover {
+                                                opacity: 0.8;
+                                                color: $color-base-blue;
+                                            }
+                                        }
+                                    }
+                                    .mat-select-value {
+                                        color: $color-white;
+                                        text-transform: uppercase;
+                                        font-size: 20px;
+                                        transition: all 0.5s;
+                                        text-align: center;
+                                        &:hover {
+                                            opacity: 0.8;
+                                            color: $color-base-blue;
+                                        }
+                                    }
+                                }
+                            }
+
+                            .mat-form-field-underline {
+                                display: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.cdk-overlay-container {
+    .cdk-overlay-connected-position-bounding-box {
+        .cdk-overlay-pane {
+            // transform: translateX(-5px) translateY(46px)!important; //for fix pane on center tab
+            .mat-select-panel {
+                background: $color-base-greey;
+                position: relative;
+                box-shadow: none;
+                &::-webkit-scrollbar-track {
+                    margin-top: 20px;
+                }
+                .mat-option {
+                    padding: 0px!important;
+                    &-text {
+                        text-align: center;
+                        text-transform: uppercase;
+                        font-size: 20px;
+                    }
                 }
             }
         }
