add rout-data, add base tmp for register, fx routing by page resolver, add resolver service

--- a/frontend/src/app/components/app-header/app-header.component.scss
+++ b/frontend/src/app/components/app-header/app-header.component.scss
@@ -120,7 +120,7 @@ app-header {
         .cdk-overlay-pane {
             // transform: translateX(-5px) translateY(46px)!important; //for fix pane on center tab
             .mat-select-panel {
-                background: $color-base-greey;
+                background: $color-black07;
                 position: relative;
                 box-shadow: none;
                 &::-webkit-scrollbar-track {
