--- a/frontend/src/app/pages/register/register.component.scss
+++ b/frontend/src/app/pages/register/register.component.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/_typography.scss';
 
-app-login {
+app-register {
     display: flex;
     justify-content: center;
     align-items: center;
