--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -6,13 +6,13 @@
 			<div [formGroup]="loginForm">
 				<p>
 					<mat-form-field class="example-full-width">
-						<input type="text" matInput placeholder="Username" autocomplete="off" formControlName="loginInput">
+						<input type="text" required matInput placeholder="Username" autocomplete="off" formControlName="loginInput">
 					</mat-form-field>
 				</p>
 
 				<p>
 					<mat-form-field class="example-full-width">
-						<input type="password" matInput placeholder="Password" autocomplete="off" formControlName="passwordInput">
+						<input type="password" required matInput placeholder="Password" autocomplete="off" formControlName="passwordInput">
 					</mat-form-field>
 				</p>
 				
