--- a/frontend/src/app/components/app-header/app-header.component.html
+++ b/frontend/src/app/components/app-header/app-header.component.html
@@ -1,48 +1,57 @@
  
 <!-- <app-header> -->   
     
-    <div class="header" #headerMenu id="headerMenu">
-        <div class="container">
+	<div class="header" #headerMenu id="headerMenu">
+		<div class="container">
+			<div class="logo" itemscope itemtype="http://schema.org/Organization" >
+				<!-- <a routerLink = "{{sharedService.link}}" class="myLink">a</a> -->
+				<img src="/assets/images/main_logo.svg" 
+					alt="main-logo" 
+					class="logo-top" 
+					(click)="goHome($event)">
+			</div>
 
-            <div class="logo" itemscope itemtype="http://schema.org/Organization" >
-                <!-- <a routerLink = "{{sharedService.link}}" class="myLink">a</a> -->
-                <img src="/assets/images/main_logo.svg" 
-                    alt="main-logo" 
-                    class="logo-top" 
-                    (click)="goHome($event)">
-            </div>
+			<div class="header-tab">
+				<ul class="link-block">
+					<li class="link-block_list">
+						<a *ngIf="userActive" [routerLink]="locationService.joinWithLangRoutePath('/faq/')" CorrectLinkHref class="link">FAQ</a>
+				</li>
+				</ul>
+			</div>
 
-            <div class="header-nav">
-							<ul class="auth-block">
-								<li class="auth-block_list">
-										<a [routerLink]="locationService.joinWithLangRoutePath('/login/')" CorrectLinkHref class="link">Log in</a>
-								</li>
-								<li class="auth-block_list">
-										<a [routerLink]="locationService.joinWithLangRoutePath('/sign-up/')" CorrectLinkHref class="link">Sing up</a>
-								</li>
-							</ul>
-                <div class="social-block"></div>
-                <div class="lang-box">
-									<mat-form-field>
-										<mat-select [(ngModel)]="modelLang"
-											(openedChange)="onOpenedChange($event)"
-										>
-											<mat-option [value]='lang'
-												class="item-lang"
-												*ngFor="let lang of sharedService.languages" 
-												(click)="preventLink($event, lang)">
-												<a style="display: inline-block; font-size: 16px; text-decoration: none; width: 100%;"
-													href="{{locationService.getLocalizationPathWith(lang)}}"
-													[ngStyle]="lang === sharedService.language ? {'color': '#00D8ff'} : {'color': '#fff'}">
-													{{lang}}
-												</a>
-											</mat-option>
-										</mat-select>
-									</mat-form-field>
-                </div>
-            </div>
-            
-        </div>
-    </div>
+			<div class="header-nav">
+				<ul class="auth-block">
+					<li *ngIf="!userActive" class="auth-block_list">
+						<a [routerLink]="locationService.joinWithLangRoutePath('/login/')" CorrectLinkHref class="link">Log in</a>
+					</li>
+					<li *ngIf="!userActive" class="auth-block_list">
+						<a [routerLink]="locationService.joinWithLangRoutePath('/sign-up/')" CorrectLinkHref class="link">Sing up</a>
+					</li>
+					<li *ngIf="userActive" class="auth-block_list">
+						<a (click)="logout()" class="link">Logout</a>
+					</li>
+				</ul>
+					<div class="social-block"></div>
+					<div class="lang-box">
+						<mat-form-field>
+							<mat-select [(ngModel)]="modelLang"
+								(openedChange)="onOpenedChange($event)"
+							>
+								<mat-option [value]='lang'
+									class="item-lang"
+									*ngFor="let lang of sharedService.languages" 
+									(click)="preventLink($event, lang)">
+									<a style="display: inline-block; font-size: 16px; text-decoration: none; width: 100%;"
+										href="{{locationService.getLocalizationPathWith(lang)}}"
+										[ngStyle]="lang === sharedService.language ? {'color': '#00D8ff'} : {'color': '#fff'}">
+										{{lang}}
+									</a>
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
+					</div>
+			</div>
+		</div>
+	</div>
 
 <!-- </app-header> -->   
