--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
 			<div [formGroup]="loginForm">
 				<p>
 					<mat-form-field class="example-full-width">
-						<input type="text" required matInput placeholder="Username" autocomplete="off" formControlName="loginInput">
+						<input type="text" required matInput placeholder="Email" autocomplete="off" formControlName="loginInput">
 					</mat-form-field>
 				</p>
 
