add global preloader in app.component, globalEvent store

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- <app-root> -->
   
   <div class="container wrapper" #wrapper id="wrapper">
+    <global-preloader></global-preloader>
     <app-header></app-header>
 
     <main class="main" #mainBlock>
