--- a/frontend/src/app/components/app-header/app-header.component.scss
+++ b/frontend/src/app/components/app-header/app-header.component.scss
@@ -9,7 +9,7 @@ app-header {
         padding: 7px 0px;
         width: 100%;
         display: flex;
-        background: $color-black02;
+        // background: $color-black02;
         left: 0;
 
         .container {
