global event component  done

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,9 @@
   
   <div class="container wrapper" #wrapper id="wrapper">
     <global-preloader></global-preloader>
+    <global-event></global-event>
     <app-header></app-header>
+
 
     <main class="main" #mainBlock>
       <router-outlet></router-outlet>
