--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -22,6 +22,7 @@
 
 				<div class="buttons">
 					<button
+						mat-raised-button
 						class="login-btn"
 						(click)="onSubmitLogin($event)"
 						[disabled]="!loginForm.valid"
