--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -25,4 +25,5 @@ $color-black02:rgba(0, 0, 0, 0.2);
 $color-black025:rgba(0, 0, 0, 0.25);
 $promo-shadow-dark: rgba(18, 24, 52, 0.6);
 $img-gradient-after: rgba(18, 22, 53, 0.58);
+$success-background: #28a745;
 //size
